<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">


            </LinearLayout>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/list"
                android:textSize="30sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                android:background="@drawable/shadow_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/babyCrying"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawablePadding="20dp"
                        android:drawableBottom="@drawable/baby_crying_custom"
                        android:checked="true"
                        android:text="@string/babyCrying"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/car_horn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:drawableBottom="@drawable/car_horn_custom"
                        android:drawablePadding="20dp"
                        android:text="@string/carhorn"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/dog_bark"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:drawableBottom="@drawable/barking_dog_custom"
                        android:drawablePadding="20dp"
                        android:text="@string/dogbark"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/siren"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:drawableBottom="@drawable/siren_custom"
                        android:drawablePadding="20dp"
                        android:text="@string/siren"
                        android:textAlignment="center"
                        android:textSize="24sp" />

                    <CheckBox
                        android:id="@+id/jackhammer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:checked="true"
                        android:drawableBottom="@drawable/jackhammer_custom"
                        android:drawablePadding="20dp"
                        android:text="@string/excavator"
                        android:textAlignment="center"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setvibD"
                android:layout_weight="0"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shadow_background">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/size"
                        android:textSize="24sp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/v_low"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="25dp"
                            android:text="@string/one"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/v_strong"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="25dp"
                            android:checked="true"
                            android:text="@string/three"
                            android:textSize="20sp" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/pattern"
                        android:textSize="24sp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginBottom="5dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/v_one"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="25dp"
                            android:text="@string/n_one"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/v_two"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="25dp"
                            android:checked="true"
                            android:text="@string/n_two"
                            android:textSize="20sp" />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/save_btn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#FFFFFF"
                android:text="SAVE"
                android:textSize="25sp" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">
        <Button
            android:id="@+id/record_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#d7d7d7"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="소리\n기록"
            android:textSize="35sp" />

        <Button
            android:id="@+id/set_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#b0b0b0"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="소리\n설정"
            android:textSize="35sp" />

        <Button
            android:id="@+id/customer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#d7d7d7"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="고객\n센터"
            android:textSize="35sp" />
    </LinearLayout>
</LinearLayout>
