<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp">

    <RadioGroup
        android:id="@+id/select_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/total_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/total_btn"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/babyCrying_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="아기 울음 소리"
            android:layout_weight="1"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/car_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="차 경적 소리"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/dog_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="개 짖는 소리"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/siren_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="사이렌"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/jackhammer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="굴착기"
            android:textSize="15sp" />

    </RadioGroup>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/top_bottom_border">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sound_type"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time"
            android:textAlignment="center"
            android:textSize="18sp" />

    </TableRow>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/record_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#b0b0b0"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="소리\n기록"
            android:textSize="35sp" />

        <Button
            android:id="@+id/set_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#d7d7d7"
            android:text="소리\n설정"
            android:textSize="35sp" />

        <Button
            android:id="@+id/customer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#d7d7d7"
            android:text="고객\n센터"
            android:textSize="35sp" />
    </LinearLayout>

</LinearLayout>